Fix aspect ratio of GIFs on narrow screens

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -137,6 +137,7 @@ figure {
             display: block;
             margin: 0 auto;
             max-width: 100vw;
+            height: auto;
         }
     }
 
